--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@ footer {
   text-align: center;
   margin: 30px 0;
 }
+
+.App-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
