Styled dictionary output & ensured only 1 phonetic would output
- created DictionaryResults.css
- capitalised part of speech
- edited bullet point markers and removed indent on inner bullet points
- styled definition, example and synonym text color and weight
- edited phonetics component to prevent multiple phonetics being issued

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,12 @@ footer a:hover {
 .word-of-day h2 {
   font-size: 22px;
 }
+
+.capitalize-first-letter::first-letter {
+  text-transform: uppercase;
+}
+
+.Phonetic .material-symbols-outlined {
+  position: relative;
+  top: 6px;
+}
