--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,10 @@ footer a:hover {
 
 @media (max-width: 400px) {
   h6 {
-    font-size: 33px;
+    font-size: 32px;
+  }
+
+  footer div {
+    font-size: 8px;
   }
 }
